--- a/style.css
+++ b/style.css
@@ -1,5 +1,37 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+.banner-container {
+  background-color: rgb(229, 84, 115, 0.2);
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 130px;
+}
+.banner-title {
+  font-size: 60px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.banner-description {
+  font-size: 17px;
+  margin: 25px 0;
+  line-height: 1.5em;
+}
+.primary-btn {
+  background-color: #e55473;
+  color: white;
+  font-size: 16px;
+  padding: 15px 45px;
+  border: none;
+  border-radius: 5px;
+}
+.banner-image {
+  height: 730px;
+  width: 550px;
+  padding-top: 100px;
 }
