--- a/style.css
+++ b/style.css
@@ -35,3 +35,74 @@
   width: 550px;
   padding-top: 100px;
 }
+/* Our features part style  */
+.features-container{
+    margin: 100px 0;
+}
+.features-text{
+    text-align: center;
+}
+.features-title{
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+.features-description{
+    font-size: 17px;
+    margin-bottom: 20px;
+}
+.features-image-box{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 40px;
+    margin: 10px 0;
+     
+}
+.box-1{
+    background-color: #F2DEE7;
+    height:500px;
+    width: 350px;
+    margin: 10px;
+    border-radius: 250px 250px 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    
+}
+.box-2{
+    background-color: #D9EFF1;
+    height: 500px;
+    width: 350px;
+    margin: 10px;
+    border-radius: 250px 250px 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    
+}
+.box-3{
+    background-color: #E3EBDB;
+    height: 500px;
+    width: 350px;
+    margin: 10px;
+    border-radius: 250px 250px 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
+}
+.features-image{
+    width: 310px;
+    height: 500px;
+    padding-top: 140px;
+}
+.image-caption{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: underline;
+}
