--- a/style.css
+++ b/style.css
@@ -36,95 +36,117 @@
   padding-top: 100px;
 }
 /* Our features part style  */
-.features-container{
-    margin: 100px 0;
+.features-container {
+  margin: 100px 0;
 }
-.features-text{
-    text-align: center;
+.features-text {
+  text-align: center;
 }
-.features-title{
-    font-size: 40px;
-    font-weight: bold;
-    margin-bottom: 15px;
+.features-title {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 15px;
 }
-.features-description{
-    font-size: 17px;
-    margin-bottom: 20px;
+.features-description {
+  font-size: 17px;
+  margin-bottom: 20px;
 }
-.features-image-box{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0 40px;
-    margin: 10px 0;
-     
+.features-image-box {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0 40px;
+  margin: 10px 0;
 }
-.box-1{
-    background-color: #F2DEE7;
-    height:500px;
-    width: 350px;
-    margin: 10px;
-    border-radius: 250px 250px 0 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-    
+.box-1 {
+  background-color: #f2dee7;
+  height: 500px;
+  width: 350px;
+  margin: 10px;
+  border-radius: 250px 250px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.box-2{
-    background-color: #D9EFF1;
-    height: 500px;
-    width: 350px;
-    margin: 10px;
-    border-radius: 250px 250px 0 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-    
+.box-2 {
+  background-color: #d9eff1;
+  height: 500px;
+  width: 350px;
+  margin: 10px;
+  border-radius: 250px 250px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.box-3{
-    background-color: #E3EBDB;
-    height: 500px;
-    width: 350px;
-    margin: 10px;
-    border-radius: 250px 250px 0 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    
+.box-3 {
+  background-color: #e3ebdb;
+  height: 500px;
+  width: 350px;
+  margin: 10px;
+  border-radius: 250px 250px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.features-image{
-    width: 310px;
-    height: 500px;
-    padding-top: 140px;
+.features-image {
+  width: 310px;
+  height: 500px;
+  padding-top: 140px;
 }
-.image-caption{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    text-decoration: underline;
+.image-caption {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-decoration: underline;
 }
 /* delivery part style */
-.delivery-container{
-    background-color: #F4F4F4;
-    margin: 100px 120px;
-    padding: 50px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 300px;
-    border-radius: 20px;
+.delivery-container {
+  background-color: #f4f4f4;
+  margin: 100px 120px;
+  padding: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 300px;
+  border-radius: 20px;
 }
-.icon{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+.icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.icon-img{
-   width: 80px;
-   margin-bottom: 20px;
-
+.icon-img {
+  width: 80px;
+  margin-bottom: 20px;
+}
+/* Hot deal section styles */
+.deal-container {
+  height: 400px;
+  width: 100%;
+  background-color: #ffe0e8;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0 150px;
+  margin: 100px 0;
+}
+.deal-title {
+  font-size: 35px;
+  font-weight: bold;
+  margin-bottom: 25px;
+  padding-left: 60px;
+}
+.color {
+  color: #e55473;
+}
+.deal-description {
+  margin: 30px 0;
+}
+.btn-2 {
+  width: 180px;
+  margin: 1px auto;
+}
+.deal-image-inside {
+  width: 250px;
 }
