--- a/style.css
+++ b/style.css
@@ -150,3 +150,17 @@
 .deal-image-inside {
   width: 250px;
 }
+/* Instragram part style */
+.instragram-container{
+  text-align: center;
+  margin: 100px 0;
+}
+.instragram-title{
+  font-size: 40px;
+  margin-bottom: 10px;
+}
+.instragram-description{
+  color: #272727;
+  font-size: 18px;
+  line-height: 1.4em;
+}
